--- a/outline/outline.tex
+++ b/outline/outline.tex
@@ -14,25 +14,25 @@
 \section{Summary}
 I will examine the effect of world food prices on nutrition in West Africa, a region which has undergone significant commercialization of agriculture over the past 30 years and now imports substantial amounts of food. Reducing trade costs can help attenuate local shocks like drought. This is well understood. However, reducing trade costs also exposes a community to world price volatility.
 \par
-Previous studies have shown that fluctuations in world food prices affect nutrition in developing countries. I make two novel arguments. One, that having the right to use land mitigates the effect of world price shocks. Two, that trade costs, meaning the transportation costs between a locale and the world market, mitigate the effect of world price shocks. These hypotheses are not particularly surprising, but their magnitude is not well understood relative to the magnitude of local shocks. The role of land is particularly important given the general pattern of greater concentration of land ownership in more commercialized communities.
+Previous studies have shown that increases in world food prices can harm nutrition in developing countries. It has been noted that land-holders may gain from increased food prices if they are net-sellers of food. I argue that even if the houshehold is a net-buyer, holding land may help families buffer the effect of high food prices. I also argue that trade costs, meaning the transportation costs between a locale and the world market, mitigate the effect of world price shocks. I hope to estimate the magnitude of the effect of food price shocks, in order to compare it with the already studied mitigation of local producitivity shocks. The role of land is particularly important given the general pattern of greater concentration of land ownership in more commercialized communities.
 
 \section{Land and Food}
 Imagine a rural community in Cote d'Ivoire. There is a cocoa plantation where most people work, but most people also grow their own food in small gardens. Suppose they grow yams. The amount and quality of land which one has to cultivate is not equally distributed, as some households have large, fertile plots, while those of others are small and barren. Households then choose how much time to spend working on the plantation vs growing food on their land. We can create a PPF to model this. The two axes are yams and cash, and real wages are $\frac{w}{p}$. We don't need any preferences to see that households will produce where the relative price is tangent to the PPF. If a household does not have a right to use land, then they will produce at the bottom right corner of the PPF. See figure 1. Without preferences, I'll simply discuss the ``yam-income" of the households, i.e. their real income in terms of food. \par
-Now consider two scenarios, one where the community is autarkic, and the other where they are open and connected to the world market. The effect of a local productivity shock, say drought, will be different in the two cases. In both cases, the PPF will shift downwards, as it becomes harder to grow yams. In autarky, $\frac{w}{p}$ will also decrease, as yams become more scarce and therefore more expensive. Farmers may also increase their labor supply, as they work less on their own land, decreasing the nominal wage. The decrease in real wages will reduce the yam-income of the landless. The land-holders will experience both a decrease in productive capacity and real-wages. Figure 2. \par
+Now consider two scenarios, one where the community is autarkic, and the other where they are open and connected to the world market. The effect of a local productivity shock, say drought, will be different in the two cases. In both cases, the PPF will shift downwards, as it becomes harder to grow yams. In autarky, $p$ will also decrease, as yams become more scarce. Farmers may also increase their labor supply, as they work less on their own land, decreasing the nominal wage. The decrease in real wages will reduce the yam-income of the landless. The land-holders will experience both a decrease in productive capacity and real-wages. Figure 2. \par
 If the community is a small open economy (SOE) where the relative prices are set independent of local events, then local productivity shocks will not effect the price ratio. Being connected to world markets will allow the community to buffer local shocks. This has been argued many times before and does not require explication. See figure 3. \par
 If the community is an SOE then real-income volatility from local shocks will decrease. But there is now a new source of volatility: the world market. Changes in world prices affect the exchange relations of the households. These shocks will be felt more strongly by the landless. Their real income will shift one to one with changes in the real wage. If the world price of yams rises steeply, and their wages do not, they may fall into famine. Such a case has been documented for the Bengal famine of 1943. The land-holders, on the other hand, are able to attenuate this shock by re-allocating resources according to the price-signal. If yam prices go up, then they grow more yams. Controlling the means of production allows them to ride the wave of the market. It does not guarantee that they are made better off by the price change, this depends on their position as net-buyer or seller, but they are less vulnerable than the landless. They have two advantages to make their real income less volatile. One is diversification. The the ability to reallocate resources according to prices.\footnote{This is unrealistic, as crops take a season to grow. This is something I would like to think more about in future work,} See figure 4. \par
-Opening up to trade reduces real-income volatility from local shocks, but creates new volatility from the world market. It could be that real income becomes more or less volatile, depending on whether local shocks or global shocks are more significant. Thus, opening up to trade might make both the landholders and landless more or less vulnerable to famine/malnutrition. However, regardless of absolute terms, in relative terms trade helps alleviate volatility more for the landholders than for the landless. The landless should be more sensitive to world price shocks, while the landholders are more sensitive to local shocks. Because opening up to trade amplifies world price shocks while attenuating local shocks, landholders gain more (in terms of volatility). Note that I am not modeling equilibrium gains, but sensitivity to shocks. It could be that opening up to trade increases real wages on average. The equilibrium effects of trade on rural West Africa is something I would like to explore in future research.
+Opening up to trade reduces real-income volatility from local shocks, but creates new volatility from the world market. It could be that real income becomes more or less volatile, depending on whether local shocks or global shocks are more significant. Thus, opening up to trade might make both the landholders and landless more or less vulnerable to famine/malnutrition. However, regardless of absolute terms, in relative terms trade helps alleviate volatility more for the landholders than for the landless. The landless should be more sensitive to world price shocks, while the landholders are more sensitive to local shocks. Because opening up to trade amplifies world price shocks while attenuating local shocks, landholders have more volatility smoothed by improving trade connections. Note that I am not modeling equilibrium gains, but sensitivity to shocks. It could be that opening up to trade increases real wages on average. The equilibrium effects of trade on rural West Africa is something I would like to explore in future research.
 
 \section{World prices and Local Prices}
-Trade costs provide buffering of the effect of world market. Consider a village in West Africa. The world market is represented by the nearest port. There is some transportation cost from the village to the port. This is the trade cost.  If a good is always or never traded, then trade costs will not affect the volatility of prices. If a good is sometimes trades, then trade costs can affect price volatility. If the world price were stable, it would stabilize the local price within a band defined by the trade costs. Similarly, if autarkic prices were stable, then the trade costs dampen shocks in the world price. Trade costs create a band within which the autarkic price determines the market price, and outside of which the price is determined by the world price.
+Trade costs provide buffering of the effect of world market. Consider a village in West Africa. The world market is represented by the nearest port. There is some transportation cost from the village to the port. This is the trade cost.  If a good is always or never traded, then trade costs will not affect the volatility of prices. If a good is sometimes trades, then trade costs can affect price volatility. If the world price were stable, it would stabilize the local price within a band defined by the trade costs. Similarly, if autarkic prices were stable, then the trade costs dampen shocks in the world price. Trade costs create a band within which the autarkic price determines the market price, and outside of which the price is determined by the world price. The conceptual framework is analogous to a gold point model, where the autarkic price of gold determines whether it is exported or imported.
 
 \section{Data}
 I plan to use the Demographic and Health Survey (DHS) to address these questions. The DHS has information on maternal and infant anemia, whether the household owns land for agriculture, and location in time and space. 
 \section{Empirics}
-Consider a simple regression on the individual level. $A_i$, anemia, is on the left-hand side. On the right hand side, we have world food price, $P_i$, interacted with a dummy for whether the household owns land, $L_i$.
+Consider a simple regression on the individual level, within the conceptual framework outlined above. $A_i$, anemia, is on the left-hand side. On the right hand side, we have the world price of yams $P_i$, interacted with a dummy for whether the household owns land, $L_i$. Anemia should be an increasing function of the price of yams, as households are less able to purchase food. However, owning land should counterbalance the negative effect of yam-prices. In the case that a household produces more yams than they eat, the effect of an increase in yam prices will be positive. For those who eat more yams than they produce, the effect will still be negative, but smaller than for those who hold no land.
 \[ A_i = \beta P_i + \delta P_i * L_i + \epsilon_i
 \]
-Understanding the effect of world prices on nutrition is fairly straightforward, given that world prices are exogenous to local conditions and variables. The world food prices vary in time and at the level of currency-union. However, households which own land will be different in both observable and unobservable characteristics, meaning that the interaction term should not be thought of as causal. Moreover, because land-ownership is not equally distributed across space, the interaction term may capture difference in effect of world prices across space, rather than between land-holders and landless. To get around this, we can use a multi-level model where the coefficients vary across villages.
+The world food prices vary in time and at the level of currency-union. However, households which own land will be different in both observable and unobservable characteristics, meaning that the interaction term should not be thought of as causal. Moreover, because land-ownership is not equally distributed across space, the interaction term may capture difference in effect of world prices across space, rather than between land-holders and landless. To get around this, we can use a multi-level model where the coefficients vary across villages.
 \par
 World prices vary in time, but are the same for everyone in a particular village at a particular time. In order to get variation at the individual level, rather than village-level, we can take a fetal-origins approach. Infants acquire most of the iron stores in-utero, and then deplete them over the first 6 months of their life, when they break down their fetal hemoglobin and produce new, adult hemoglobin. Thus maternal anemia during gestation is an important determinant of infant anemia. We can relate the anemia of each infant to food prices during the period of gestation. 
 \par
@@ -53,5 +53,5 @@ These regressions are overly-simplified. Several issues to address:
 	\item Even if we can measure trade costs, they will be correlated with other variables of interest. Thus, the second level cannot be interpreted causally-- it would be suggestive.
 \end{itemize}
 
-\includepdf[pages=-,pagecommand={},width=\textwidth]{/home/friend/thesis/outline/figures}
+\includepdf[pages=-,pagecommand={},width=\textwidth]{/home/friend/Documents/figures}
 \end{document}
