--- a/outline/outline.tex
+++ b/outline/outline.tex
@@ -14,7 +14,7 @@
 \section{Summary}
 I will examine the effect of world food prices on nutrition in West Africa, a region which has undergone significant commercialization of agriculture over the past 30 years and now imports substantial amounts of food. Reducing trade costs can help attenuate local shocks like drought. This is well understood. However, reducing trade costs also exposes a community to world price volatility.
 \par
-Previous studies have shown that increases in world food prices can harm nutrition in developing countries. It has been noted that land-holders may gain from increased food prices if they are net-sellers of food. I argue that even if the houshehold is a net-buyer, holding land may help families buffer the effect of high food prices. I also argue that trade costs, meaning the transportation costs between a locale and the world market, mitigate the effect of world price shocks. I hope to estimate the magnitude of the effect of food price shocks, in order to compare it with the already studied mitigation of local producitivity shocks. The role of land is particularly important given the general pattern of greater concentration of land ownership in more commercialized communities.
+Previous studies have shown that increases in world food prices can harm nutrition in developing countries. It has been noted that land-holders may gain from increased food prices if they are net-sellers of food. I argue that even if the houshehold is a net-buyer, holding land may help families buffer the effect of high food prices. I also argue that trade costs, meaning the transportation costs between a locale and the world market, dampen the effect of world price shocks. I hope to estimate the magnitude of the effect of food price shocks, in order to compare it with the already studied effect of local producitivity shocks. The role of land is particularly important given the general pattern of greater concentration of land ownership in more commercialized communities.
 
 \section{Land and Food}
 Imagine a rural community in Cote d'Ivoire. There is a cocoa plantation where most people work, but most people also grow their own food in small gardens. Suppose they grow yams. The amount and quality of land which one has to cultivate is not equally distributed, as some households have large, fertile plots, while those of others are small and barren. Households then choose how much time to spend working on the plantation vs growing food on their land. We can create a PPF to model this. The two axes are yams and cash, and real wages are $\frac{w}{p}$. We don't need any preferences to see that households will produce where the relative price is tangent to the PPF. If a household does not have a right to use land, then they will produce at the bottom right corner of the PPF. See figure 1. Without preferences, I'll simply discuss the ``yam-income" of the households, i.e. their real income in terms of food. \par
@@ -32,7 +32,7 @@ I plan to use the Demographic and Health Survey (DHS) to address these questions
 Consider a simple regression on the individual level, within the conceptual framework outlined above. $A_i$, anemia, is on the left-hand side. On the right hand side, we have the world price of yams $P_i$, interacted with a dummy for whether the household owns land, $L_i$. Anemia should be an increasing function of the price of yams, as households are less able to purchase food. However, owning land should counterbalance the negative effect of yam-prices. In the case that a household produces more yams than they eat, the effect of an increase in yam prices will be positive. For those who eat more yams than they produce, the effect will still be negative, but smaller than for those who hold no land.
 \[ A_i = \beta P_i + \delta P_i * L_i + \epsilon_i
 \]
-The world food prices vary in time and at the level of currency-union. However, households which own land will be different in both observable and unobservable characteristics, meaning that the interaction term should not be thought of as causal. Moreover, because land-ownership is not equally distributed across space, the interaction term may capture difference in effect of world prices across space, rather than between land-holders and landless. To get around this, we can use a multi-level model where the coefficients vary across villages.
+Households which own land will be different in both observable and unobservable characteristics, meaning that the interaction term should not be thought of as causal. Moreover, because land-ownership is not equally distributed across space, the interaction term may capture difference in effect of world prices across space, rather than between land-holders and landless. To get around this, we can use a multi-level model where the coefficients vary across villages.
 \par
 World prices vary in time, but are the same for everyone in a particular village at a particular time. In order to get variation at the individual level, rather than village-level, we can take a fetal-origins approach. Infants acquire most of the iron stores in-utero, and then deplete them over the first 6 months of their life, when they break down their fetal hemoglobin and produce new, adult hemoglobin. Thus maternal anemia during gestation is an important determinant of infant anemia. We can relate the anemia of each infant to food prices during the period of gestation. 
 \par
@@ -48,9 +48,9 @@ Given the hypotheses outlined above, we would expect that $\beta<0$, $\delta>0$ 
 \par
 These regressions are overly-simplified. Several issues to address:
 \begin{itemize}
-	\item The effect of an increase in food prices should be different from that of a decrease in food prices. Households are credit constrained. While they may be short of food during a period of high prices, they will not have a corresponding increase in food consumption when prices are low.
+	\item The effect of an increase in food prices should be different from that of a decrease in food prices. Households are credit constrained. While they may be short of food during a period of high prices, they will not have a proportionate increase in food consumption when prices are low.
 	\item Trade costs are difficult to measure. They can be proxied for by distance metrics, but I would like to construct a direct measure of trade costs. One possibility is to calculate the price differences in goods which are always traded between the port and the village. For example, the price difference of cocoa between the village where it is produced and the port should capture the underlying transportation costs between the two points.
-	\item Even if we can measure trade costs, they will be correlated with other variables of interest. Thus, the second level cannot be interpreted causally-- it would be suggestive.
+	\item Even if we can measure trade costs, they will be correlated with other variables of interest. Thus, the second level cannot be interpreted causally.
 \end{itemize}
 
 \includepdf[pages=-,pagecommand={},width=\textwidth]{/home/friend/Documents/figures}
