new outline, focused on anemia

--- a/Anemia/anemia_outline.tex
+++ b/Anemia/anemia_outline.tex
@@ -11,25 +11,40 @@
 
 \maketitle
 
-\section{Summary}
+\section{Introduction}
 I will explore the relationship between infant iron deficiency anemia (anemia) and in-utero food prices. Anemia has a strong inter-generational component. Iron is pass from the mother to the fetus, but cannot be passed through breast-milk. Thus, anemia over the first year is largely determined by maternal iron bio-availability. Female anemia is a major problem around the world, and is a self-reinforcing cycle. \par
 
 World food prices are volatile, more volatile than most other goods. Large increases in world food prices, partly driven by policy and finance in developed countries, have caused discontent and food-insecurity around the world. As agriculture becomes more commercialized, households become more dependent on world markets for food. This has increased the amount of food-security caused by market volatility, while decreasing the effect of local shocks like weather. 
 \par
-
-I hope to provide convincing evidence of the inter-generational transmission of anemia, adding another dimension in which maternal nutrition is important. I also hope to highlight a cost of food price volatility.
-
-\section{title}
-
-
-
-I will explore the effect of in-utero food prices on infant and childhood anemia. The absolute and relative prices of food determine the bio-avalability of iron in the diet. This iron is passed on to the fetus, and is used to construct the adult hemoglobin. Breast milk cannot be transmitted through iron, meaning that the in-utero period is key. \par
-On the left hand side, anemia. On the right, not sure. It could be world or local prices, it could be absolute or relative prices. I think I need to think about my punchline first. It's not just that anemia goes from mother to child. We know that. Why then am I doing this?
+Many studies have shown that market integration leads to dampening of local productivity shocks, helping households smooth consumption over time. However, increased integration into the world commodity market makes households more sensitive to changes in world prices. Being credit-constrained, sudden increases in the price of food may reduce the ability of household to make ends meet and get food on the table. Increases in world food price have caused famine, as in Bengal in 1943. Recent news coverage has focused attention on market-based food insecurity, which comes from volatile real income combined with credit constraints.
+\par
+I hope to provide novel, well-identified evidence to inter-generational transmission of anemia, and map this important public health question onto the policy debates which surround trade, in particular, arguments which surround trade and food security. Agriculture is increasingly commercialized. The masses of the world increasingly rely on imported foodstuffs, whose effective, local prices depend on the actions financiers and central banks. Trade and food-security is not new, and arguments exactly like these surrounded the English Corn Laws debate of 1840's and the Great Famine in Ireland. Using modern data and medical knowledge, I hope to explore the relationship between instability of prices and chronic nutrition among the populations of the developing world. I propose two hypotheses:
 \begin{itemize}
-	\item	Quantify the effect of world price shocks (the costs of trade)
-	\item 	We can then show that the effect is bigger in more remot areas
-	\item 	Start to build the infrastructure for Macro fetal-origins paper
+	\item Infant anemia is increasing in world food-price increases.
+	\item This effect is decreasing in distance to world market.
 \end{itemize}
+
+\section{Iron Anemia: Biological mechanisms}
+Anemia is characterized by low levels of hemoglobin in the blood, and causes INSERT ANEMIA EFFECTS HERE. Anemia is a health concern in rich and poor countries, but it is generally decreasing with affluence. Iron availability depends on diet, both quantity and quality. Diets rich in heme (animal based) iron protect against anemia. Plant sources of iron may suffice, but absorption is more difficult and depends on the quantity of Vitamin C consumed. Iron supplements are also used, but there is uncertainty due to questions of absorption. 
+\par
+Iron is important for both maternal and fetal health. For the mother, anemia makes complications (and death) from birth more likely. Iron is passed from the mother to fetus, allowing the development of fetal hemoglobin, which differs from adult hemoglobin. After birth, the infant breaks down the fetal hemoglobin and synthesizes adult hemoglobin. No iron is transmitted through breast-milk. The fetus must develop sufficient stores of iron in order to make the transition from fetal to adult hemoglobin as they grow and their blood volume increases. Iron directly limits the amount of hemoglobin in the blood, and HAS OTHER EFFECTS ON INFANTS.
+\par
+Maternal anemia then has a direct effect on infant anemia, as the fetus cannot make adequate stores to last the breast-feeding period and associated growth. Unless remedied through increased iron consumption, anemia will remain as the infant grows into a child. During menarche, iron needs increase for girls, and many become anemic. Thus an anemic mother begets anemic child who becomes and anemic woman who begets an anemic child etc. This inter-generational aspect of anemia is well appreciated by the WHO and is recognized as a major problem of public health, nutrition and female empowerment.
+
+\section{Household Nutrition and World Prices}
+The relationship between world food prices and female nutrition is not simple. Nutrition is related to, but not the same as, consumption. Food consumption is mediated through prices. This mediation depends on whether the household is a net seller or buyer of food, as well as the household's ability to smooth consumption. Female nutrition may not improve as household consumption increases due to gender inequality. Intra-household allocation of resources is a messy swamp occupying the intersection economics, anthropology, sociology and psychology. Beyond the complexities of consumption, local prices are not equal to global prices. Recent research has shown that even the notion of a ``local price" is misleading. In fact, prices are different for everyone and depend on a complex network of social relations as well as cultural norms of exchange.
+\par
+Playing Alexander to this knot of a relationship, I will assert a reduced form relationship, and hope my readers find it innocuous: female consumption of a good is decreasing in the world price of that good. I will further assert that the effect of world prices on local prices is decreasing in the distance between a given locality and the world market. The world market will be thought of as the sea. Thus, a port has distance zero. The world price for a given time and place will be mediated through the exchange rate.
+\par
+Even with these simplifying assumptions, we must heap structure onto the ``world price" if we'd like to put it on the right side of a regression. Food is not a commodity, it is a class. Thus, any talk of food prices must refer to an index. How shall we construct such an index? I will focus on three issues:
+\begin{itemize}
+	\item Iron content varies widely over foodstuffs. If we are most interested in anemia, rather than a more general notion of nutrition, then we might construct an index in which the price of each food is weighted by its iron-richness (e.g. meat with a heavier weight than rice)
+	\item The effect of increases in food prices differ across regions because of both production and consumption patterns. If a region is a net-exporter of maize, then an increase in the price of maize will lead to a proportionate increase in real income in terms of other goods. On the demand side, if a household does not consume a certain product (e.g. beef for Hindus) then an increase in the price of that good should have no, or little, effect. Thus, one could create weights at the region or household level (depending on the richness of data) which capture the production and consumption importance of each good.
+	\item The effect of an increase in price is nonlinear. The effect of a price increase on food consumption is different from that of a decrease because of credit-constraints. A large increase in price may push the household against its borrowing constraint, where a small increase would not.
+\end{itemize}
+
+\section{Data}
+I plan to use the DHS survey, which contains information on location, anemia and a host of other household and geographic variables.
 
 
 \end{document}
