--- a/Anemia/anemia_outline.tex
+++ b/Anemia/anemia_outline.tex
@@ -24,17 +24,17 @@ I hope to provide novel, well-identified evidence to inter-generational transmis
 	\item This effect is decreasing in distance to world market.
 \end{itemize}
 
-\section{Iron Anemia: Biological mechanisms}
-Anemia is characterized by low levels of hemoglobin in the blood, and causes INSERT ANEMIA EFFECTS HERE. Anemia is a health concern in rich and poor countries, but it is generally decreasing with affluence. Iron availability depends on diet, both quantity and quality. Diets rich in heme (animal based) iron protect against anemia. Plant sources of iron may suffice, but absorption is more difficult and depends on the quantity of Vitamin C consumed. Iron supplements are also used, but there is uncertainty due to questions of absorption. 
+\section{Anemia: Biological mechanisms}
+Anemia is characterized by low levels of hemoglobin in the blood, and can be caused by deficiencies in several micronutritients including iron, folate and many others. The majority of anemia cases are caused by iron deficiency. Iron-deficiency anemia impairs cognitive and motor development and causes fatigue. Anemia is a health concern in rich and poor countries, but it is generally decreasing with affluence. Iron availability depends on diet, both quantity and quality. Diets rich in heme (animal based) iron protect against anemia. Plant sources of iron may suffice, but absorption is more difficult and depends on the quantity of Vitamin C consumed. Iron supplements are also used, but there is uncertainty due to questions of absorption. 
 \par
-Iron is important for both maternal and fetal health. For the mother, anemia makes complications (and death) from birth more likely. Iron is passed from the mother to fetus, allowing the development of fetal hemoglobin, which differs from adult hemoglobin. After birth, the infant breaks down the fetal hemoglobin and synthesizes adult hemoglobin. No iron is transmitted through breast-milk. The fetus must develop sufficient stores of iron in order to make the transition from fetal to adult hemoglobin as they grow and their blood volume increases. Iron directly limits the amount of hemoglobin in the blood, and HAS OTHER EFFECTS ON INFANTS.
+Iron is important for both maternal and fetal health. For the mother, anemia makes complications (and death) from birth more likely. Iron is passed from the mother to fetus, allowing the development of fetal hemoglobin, which differs from adult hemoglobin. After birth, the infant breaks down the fetal hemoglobin and synthesizes adult hemoglobin. No iron is transmitted through breast-milk. The fetus must develop sufficient stores of iron in order to make the transition from fetal to adult hemoglobin as they grow and their blood volume increases. Iron directly limits the amount of hemoglobin in the blood, and impairs cognitive development.
 \par
 Maternal anemia then has a direct effect on infant anemia, as the fetus cannot make adequate stores to last the breast-feeding period and associated growth. Unless remedied through increased iron consumption, anemia will remain as the infant grows into a child. During menarche, iron needs increase for girls, and many become anemic. Thus an anemic mother begets anemic child who becomes and anemic woman who begets an anemic child etc. This inter-generational aspect of anemia is well appreciated by the WHO and is recognized as a major problem of public health, nutrition and female empowerment.
 
 \section{Household Nutrition and World Prices}
 The relationship between world food prices and female nutrition is not simple. Nutrition is related to, but not the same as, consumption. Food consumption is mediated through prices. This mediation depends on whether the household is a net seller or buyer of food, as well as the household's ability to smooth consumption. Female nutrition may not improve as household consumption increases due to gender inequality. Intra-household allocation of resources is a messy swamp occupying the intersection economics, anthropology, sociology and psychology. Beyond the complexities of consumption, local prices are not equal to global prices. Recent research has shown that even the notion of a ``local price" is misleading. In fact, prices are different for everyone and depend on a complex network of social relations as well as cultural norms of exchange.
 \par
-Playing Alexander to this knot of a relationship, I will assert a reduced form relationship, and hope my readers find it innocuous: female consumption of a good is decreasing in the world price of that good. I will further assert that the effect of world prices on local prices is decreasing in the distance between a given locality and the world market. The world market will be thought of as the sea. Thus, a port has distance zero. The world price for a given time and place will be mediated through the exchange rate.
+Playing Alexander to this Gordian knot, I will assert a reduced form relationship, and hope my readers find it innocuous: female consumption of a good is decreasing in the world price of that good. I will further assert that the effect of world prices on local prices is decreasing in the distance between a given locality and the world market. The world market will be thought of as the sea. Thus, a port has distance zero. The world price for a given time and place will be mediated through the exchange rate.
 \par
 Even with these simplifying assumptions, we must heap structure onto the ``world price" if we'd like to put it on the right side of a regression. Food is not a commodity, it is a class. Thus, any talk of food prices must refer to an index. How shall we construct such an index? I will focus on three issues:
 \begin{itemize}
@@ -44,7 +44,7 @@ Even with these simplifying assumptions, we must heap structure onto the ``world
 \end{itemize}
 
 \section{Data}
-I plan to use the DHS survey, which contains information on location, anemia and a host of other household and geographic variables.
+I plan to use the DHS survey, which contains information on location, anemia and many other household and geographic variables.
 
 
 \end{document}
