--- a/Anemia/anemia_outline.tex
+++ b/Anemia/anemia_outline.tex
@@ -12,29 +12,29 @@
 \maketitle
 
 \section{Introduction}
-I will explore the relationship between infant anemia and in-utero world commodity prices. Anemia has a strong inter-generational component. Iron is passed from the mother to the fetus, but cannot be passed through breast-milk. Thus, anemia early in life is largely determined by maternal bio-availability of iron\footnote{And certain other micronutrients.} during pregnancy. Female anemia is a major problem around the world, and is a self-reinforcing cycle. \par
+I will explore the effect of commodity price shocks during pregnancy on infant anemia. Anemia has a strong inter-generational component. Iron is passed from mother to fetus, but cannot be transmitted through breast-milk. Thus, anemia early in life is largely determined by maternal bio-availability of iron\footnote{And certain other micronutrients.} during pregnancy. Female anemia is a major problem around the world, and is a self-reinforcing cycle. \par
 
-Commodity prices are volatile, more volatile than those of manufactured goods. Spikes in world food prices have caused discontent and food-insecurity around the world, as in the 2007-08 world food price crisis. As agriculture becomes more commercialized, households become more dependent on world markets for food. This has increased the exposure of households to market volatility, while insulating households from the effects of local shocks like weather. Being credit-constrained, sudden increases in the price of food may cause a decrease in consumption and acute malnutrition. Increases in world food price may even cause famine, as in Bengal in 1943. Recent news coverage has focused on market-based food insecurity, which comes from volatile real income combined with credit constraints. Increase reliance on market goods may increase the average income of a household, but also make it more variable. Whether these households are better off is ambiguous.
+Commodity prices are volatile, more volatile than those of manufactured goods. Spikes in world food prices have caused discontent and food-insecurity around the world, as in the 2007-08 world food price crisis. As agriculture becomes more commercialized, households become more dependent on world markets for food. This has increased the exposure of households to market volatility, while insulating households from the effects of local shocks like weather. Being credit-constrained, sudden increases in the price of food may necessitate a decrease in consumption and lead to acute malnutrition. Increases in world food price may even cause famine, as in Bengal in 1943. Recent news coverage has focused on market-based food insecurity, which comes from volatile real income combined with credit constraints. Increase reliance on market goods may increase the average income of a household, but also make it more variable. Whether these households are better off is ambiguous, as is whether vulnerable members within the family, like women, are better off.
 \par
-I hope to provide novel, well-identified evidence on inter-generational transmission of anemia, and map this important public health question onto the policy debates which surround trade and food security. Agriculture is increasingly commercialized. The masses of the world increasingly rely on imported foodstuffs, whose local prices depend on the actions financiers and central banks. Trade and food-security is an old debate, and it surrounded the debate over the Corn Laws and famine relief in England in the mid-19th century. Using modern data and medical knowledge, I hope to explore the relationship between instability of prices and chronic nutrition among the populations of the developing world. I propose two hypotheses:
+I hope to provide novel, well-identified evidence on inter-generational transmission of anemia, and map this public health question onto the policy debates which surround trade and food security. Agriculture is increasingly commercialized. The masses of the world increasingly rely on imported foodstuffs, whose local prices depend on the actions of financiers and central banks. Trade and food-security is an old debate, famously explored in 19th century England over the Corn Laws. Using modern data and medical knowledge, I hope to explore the relationship between instability of prices and chronic nutrition among the populations of the developing world. I propose two hypotheses:
 \begin{itemize}
 	\item Infant anemia is increasing in world food-prices.\footnote{I discuss exactly what is meant by ``world food price" below.}
 	\item This effect is decreasing in distance to world market.
 \end{itemize}
 
 \section{Anemia: Biological mechanisms}
-Anemia is characterized by low levels of hemoglobin in the blood and can be caused by deficiencies in iron, folate and other micronutrients. The majority of anemia cases are caused by iron deficiency. Iron-deficiency anemia causes faitgue and impairs cognitive and motor development. Anemia is a health concern in both rich and poor countries, but is more prevelant in those which are poor. Iron availability depends on food intake, both quantity and quality. Diets rich in heme (animal based) iron protect well against anemia. Plant sources of iron may suffice, but absorption is more difficult and depends on the quantity of Vitamin C consumed. Iron supplements are also used, but there is controversy over the extent of absorption from supplements.
+Anemia is characterized by low levels of hemoglobin in the blood and can be caused by deficiencies in iron, folate and other micronutrients. The majority of anemia cases are caused by iron deficiency. Iron-deficiency anemia causes fatigue and impairs cognitive and motor development. Anemia is a health concern across the income spectrum, but is more prevalent among the poor. Iron availability depends on food intake, both quantity and quality. Diets rich in heme (animal based) iron protect well against anemia. Plant sources of iron may suffice, but absorption is more difficult.
 \par
-Iron is important for both maternal and fetal health. For the mother, anemia makes complications (and death) from birth more likely. Iron is passed from the mother to fetus, allowing the development of fetal hemoglobin, which differs from adult hemoglobin. Over the first four months, the infant breaks down the fetal hemoglobin and synthesizes adult hemoglobin. No iron is transmitted through breast-milk. The fetus must develop sufficient stores of iron in order to make the transition from fetal to adult hemoglobin as they grow and their blood volume increases.
+Iron is important for both maternal and fetal health. For the mother, anemia makes complications (and death) from birth more likely. Iron is passed from the mother to fetus, allowing the development of fetal hemoglobin, which differs from adult hemoglobin. Over the first four months, the infant breaks down the fetal hemoglobin and synthesizes adult hemoglobin. Negligible iron is transmitted through breast-milk. The fetus must develop sufficient stores of iron in order to make the transition from fetal to adult hemoglobin as they grow and their blood volume increases.
 \par
-Maternal anemia then has a direct effect on infant anemia, as the fetus cannot make adequate stores to last the breast-feeding period and associated growth. Unless remedied through increased iron consumption, anemia will remain as the infant grows into a child. During menarche, iron requirements increase for girls, and anemia increases become anemic. Thus an anemic mother begets anemic child who becomes an anemic woman who begets an anemic child. This inter-generational aspect of anemia is well appreciated by the WHO and is recognized as an important issue at the nexus of public health, nutrition and female empowerment.
+Maternal anemia then has a direct effect on infant anemia, as the fetus cannot make adequate stores to last the breast-feeding period. Unless remedied through increased iron consumption, anemia will remain as the infant grows into a child. During menarche, iron requirements increase for girls, and many become anemic. Thus an anemic mother begets anemic child who becomes an anemic woman who begets an anemic child. This inter-generational aspect of anemia is well appreciated by the WHO and is recognized as an important issue at the nexus of public health, nutrition and female empowerment.
 
 \section{Household Nutrition and World Prices}
-The relationship between world food prices and female nutrition is not simple. Nutrition is related to, but not the same as, consumption. Food consumption is mediated through prices. This mediation depends on whether the household is a net seller or buyer of food, as well as the household's ability to smooth consumption. Female nutrition may not improve as household consumption increases due to gender inequality. Intra-household allocation of resources is a messy swamp occupying the intersection economics, anthropology, sociology and psychology. Beyond the complexities of consumption, local prices are not equal to global prices. Beyond transportation costs, even the concept of a ``local price" is misleading. In fact, prices are different for everyone and depend on a complex network of social relations as well as cultural norms of exchange.
+The relationship between world food prices and female nutrition is opaque. Nutrition is related to, but not the same as, consumption, as net nutrition is also influenced by outlays like disease. Food consumption is mediated through prices. The nature of this relationship depends on whether the household is a net seller or buyer of food, as well as the household's ability to smooth consumption. Female nutrition may not improve as household consumption increases due to gender inequality. Beyond the complexities of consumption, local prices are not equal to global prices. Beyond transportation costs, even the concept of a ``local price" is misleading. In fact, prices are different for everyone and depend on a complex network of social relations as well as cultural norms of exchange.
 \par
-Playing Alexander to this Gordian knot, I will assert a reduced form relationship: female consumption of a good is decreasing in the world price of that good. I will further assert that the effect of world prices on local prices is decreasing in the distance between a given locality and the world market. The world market will be thought of as the sea. Thus, a port has distance zero. The world price for a given time and place will be mediated through the exchange rate.
+Playing Alexander to this Gordian knot, I will assert a reduced form relationship: female consumption of a good is decreasing in the world price of that good. I will further assert that the effect of world prices on local prices is decreasing in the distance between a given locality and the world market. The world market will be thought of as the sea, accessible to trade. Thus, a port has distance zero. The world price for a given time and place will be mediated through the exchange rate.
 \par
-Even with these simplifying assumptions, we must heap structure onto the ``world price" if we'd like to put it on the right side of a regression. Food is not a particular commodity, it is a class of commodities. Thus, any talk of food prices must refer to an index. How shall we construct such an index? I will focus on three issues:
+Even with these simplifying assumptions, we must heap structure onto the ``world price" in order to put it on the right side of a regression. Food is not a particular commodity, it is a class of commodities. Thus, any talk of food prices must refer to an index. How shall we construct such an index? I will focus on three issues:
 \begin{itemize}
 	\item Iron content varies widely over foodstuffs. If we are most interested in anemia, rather than a more general notion of nutrition, then we might construct an index in which the price of each food is weighted by its iron-richness (e.g. meat with a heavier weight than rice).
 	\item The effect of increases in food prices differ across regions because of both production and consumption patterns. If a region is a net-exporter of maize, then an increase in the price of maize will lead to a proportionate increase in real income in terms of other goods. On the demand side, if a household does not consume a certain product (e.g. beef for Hindus) then an increase in the price of that good should have no, or little, effect. Thus, one could create weights at the region or household level (depending on the richness of data) which capture the production and consumption importance of each good.
@@ -42,7 +42,7 @@ Even with these simplifying assumptions, we must heap structure onto the ``world
 \end{itemize}
 
 \section{Setting}
-I plan to explore the relationship of world food prices and anemia in West Africa,a region which has undergone transformation in the last 30 years, being re-oriented into commercial, plantation agriculture. I may end up applying this framework to a larger sample and explore variation across regions.
+I plan to explore the relationship of world food prices and anemia in West Africa,a region which has undergone transformation in the last 30 years, being re-oriented into commercial, plantation agriculture. I may end up applying this framework to a larger sample and explore variation across world regions.
 
 \section{Data}
 I plan to use the DHS survey, which contains information on location, anemia and many other household and geographic variables.
